--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -8,11 +9,16 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
-    "jsx": "react-jsx",
+    "esModuleInterop": true,
+      "composite": true,
+      "jsx": "react-jsx",
+    "outDir": "../dist/js",
+     "rootDir": "src", 
+    "declaration": true,
+    "declarationDir": "../dist/types",
 
     /* Linting */
     "strict": false,
